Fix rotation anchoring with root-layer-scrolls

This CL fixes coordinate differences in RotationViewportAnchor that were
assuming pre-RLS coordinates. This CL fixes the conversions to use the
correct RLS-aware methods in LocalFrameView (AbsoluteToDocument, etc.)
For details, see:
https://www.chromium.org/developers/design-documents/blink-coordinate-spaces

We also avoid using Node::BoundingBox as the name is a bit of a lie
(ContainerNode::BoundingBox has specific cases for how scrollIntoView
should work with empty inlines, for example).
LayoutObject::AbsoluteBoundingBoxRect is both clearer in the coordinate
space and it makes more sense to get this directly from the LayoutObject.

Unfortunately, we were lacking test coverage so this CL also adds new
tests that would have caught these bugs.

Bug: 806355
Change-Id: I96fea83ced6c0ce7ea8c37c4a1b82a8e9a6bb66e
Reviewed-on: https://chromium-review.googlesource.com/894887
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533332}
Former-commit-id: f1f559672cf308289c52afc8f114a9057443e602